# aware

./: CMakeLists.txt
include/aware/: announce_socket.hpp  aware.hpp
include/aware/avahi/: announce_socket.hpp  factory.hpp  monitor_socket.hpp
include/aware/bonjour/: announce_socket.hpp  factory.hpp  monitor_socket.hpp
include/aware/bonjour/detail/: announcer.hpp  browser.hpp  monitor.hpp  resolver.hpp
include/aware/detail/: native_socket.hpp
src/: CMakeLists.txt
src/avahi/: announce_socket.cpp  monitor_socket.cpp
src/avahi/detail/: announcer.cpp  browser.cpp  poller.cpp
src/bonjour/: announce_socket.cpp  monitor_socket.cpp
src/bonjour/detail/: announcer.cpp  browser.cpp  handle.cpp  monitor.cpp  resolver.cpp
src/detail/: native_socket.cpp
